# address-space-graphics-ring-protocol

./: .gitignore  CMakeLists.txt  README.md  gtest.cmake
base/: AlignedBuf.h  ArraySize.h  ConditionVariable.h  Stream.cpp  Stream.h  asg_types.h  ring_buffer.c  ring_buffer.h
client/: asg_client.h  asg_client_android.cpp  asg_client_common.cpp  asg_client_fuchsia.cpp  asg_ring_stream_client.cpp  asg_ring_stream_client.h  client_iostream.h
server/: asg_ring_stream_server.cpp  asg_ring_stream_server.h  asg_server_common.cpp  asg_server_common.h  server_iostream.h
tests/: asg_benchmark.cpp  asg_unittest.cpp
